--- a/BootStrap/Top_A_One/index.html
+++ b/BootStrap/Top_A_One/index.html
@@ -59,7 +59,6 @@
             </div>
         </div>
     </nav>
-    
     <!-- end nav bar -->
 
     <!-- start carousel -->
@@ -78,7 +77,6 @@
             </div>
         </div>
     </section>
-    
     <!-- end carousel -->
 
     <!-- start bunner -->
@@ -102,7 +100,7 @@
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
                     <div class="d-flex align-items-center" >
                         <div class="d-inline-block">
-                            <i class="fa-solid fa-rocket fa-2x carousel_icon border p-3 me-4"></i>
+                            <i class="fa-solid fa-globe fa-2x carousel_icon border p-3 me-4"></i>
                         </div>
                         <p class="d-inline-block">
                             <span class="fw-bold fs-4">Learn Togather</span>
@@ -116,7 +114,7 @@
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
                     <div class="d-flex align-items-center" >
                         <div class="d-inline-block">
-                            <i class="fa-solid fa-rocket fa-2x carousel_icon border p-3 me-4"></i>
+                            <i class="fa-regular fa-user fa-2x carousel_icon border p-3 me-4"></i>
                         </div>
                         <p class="d-inline-block">
                             <span class="fw-bold fs-4">Learn Expect</span>
@@ -170,8 +168,8 @@
         <h2 class="text-center fw-bold tm_head mb-5">Popular Courses</h2>
         <div class="row">
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
-                <div class="card course_img_hidden">
-                    <img src="images/course_4.jpg" alt="" class="card-img-top course_img_hover">
+                <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
+                    <img src="images/course_4.jpg" alt="" class="card-img-top course_img_hover mt-3 mt-xl-0">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Photoshop for Business</a>
                         </div>
@@ -184,7 +182,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
-                <div class="card course_img_hidden">
+                <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/course_5.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Adobe Illustractor</a>
@@ -198,7 +196,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
-                <div class="card course_img_hidden">
+                <div class="card course_img_hidden mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/course_7.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Vedio Editing for Busic</a>
@@ -250,8 +248,8 @@
         <h2 class="text-center fw-bold tm_head mb-5">Up Comming Courses</h2>
         <div class="row">
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
-                <div class="card course_img_hidden">
-                    <img src="images/comming_1.1.jpg" alt="" class="card-img-top course_img_hover">
+                <div class="card course_img_hidden mt-3 mt-xl-0 border-0 shadow">
+                    <img src="images/comming_1.1.jpg" alt="" class="card-img-top course_img_hover ">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Photoshop Graphic Design</a>
                         </div>
@@ -261,7 +259,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
-                <div class="card course_img_hidden">
+                <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/comming_2.1.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body  comming_card">
                             <a href="" class="card-title h3 text-decoration-none">Motion Graphic Design</a>
@@ -272,7 +270,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
-                <div class="card course_img_hidden">
+                <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/comming_3.1.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body comming_card">
                             <a href="" class="card-title h3 text-decoration-none">Adobe Premier Pro</a>
@@ -325,21 +323,31 @@
                         <a href="https://t.me/topaonetelegram"><i class="fa-brands fa-telegram fa-2x mx-2"></i></a>
                         <a href="https://www.tiktok.com/@topaonecomputer?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok  fa-2x mx-2"></i></a>
                     </p>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Enter Email.." aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <button class="btn btn-warning" type="button" id="button-addon2">Subscribe</button>
+                      </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-2">
-                    <h5 class="pt-3 ms-lg-5">Quick Links</h5>
-                    <hr class="w-25 ms-lg-5">
-                    <a href="index.html" class="d-block text-decoration-none text-white my-3 ms-lg-5"><i class="fa-solid fa-angle-right me-2"></i>Home</a>
-                    <a href="about.html" class="d-block text-decoration-none text-white my-3 ms-lg-5"><i class="fa-solid fa-angle-right me-2"></i>About</a>
-                    <a href="course.html" class="d-block text-decoration-none text-white my-3 ms-lg-5"><i class="fa-solid fa-angle-right me-2"></i>Course</a>
-                    <a href="blog.html" class="d-block text-decoration-none text-white my-3 ms-lg-5"><i class="fa-solid fa-angle-right me-2"></i>Blog</a>
+                    <h5 class="pt-3 ms-lg-3">Quick Links</h5>
+                    <hr class="w-25 ms-lg-3">
+                    <a href="index.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Home</a>
+                    <hr class="ms-lg-3 tm_hr border-light me-lg-3">
+                    <a href="about.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>About</a>
+                    <hr class="ms-lg-3 tm_hr border-light me-lg-3">
+                    <a href="course.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Course</a>
+                    <hr class="ms-lg-3 tm_hr border-light me-lg-3">
+                    <a href="blog.html" class="d-block text-decoration-none text-white my-3 ms-lg-3"><i class="fa-solid fa-angle-right me-2"></i>Blog</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <h5 class="pt-3">Contact us</h5>
                     <hr class="w-25">
                     <p><i class="fa-solid fa-phone-volume me-3"></i>09-761746819</p>
+                    <hr class="tm_hr border-light me-lg-3">
                     <p><i class="fa-solid fa-envelope me-3"></i>aungphyozaw239401@gmail.com</p>
+                    <hr class="tm_hr border-light me-lg-3">
                     <p><i class="fa-solid fa-location-dot me-3"></i>Pathein, Ayarwaddy Region</p>
+                    <hr class="tm_hr border-light me-lg-3">
                     <p><i class="fa-solid fa-globe me-3"></i>www.topaone.com</p>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
@@ -354,6 +362,7 @@
                             <p>Jan. 01, 2022</p>
                         </div>
                     </div>
+                    <hr class="tm_hr border-light me-lg-3">
                     <div class="row">
                         <div class="col-3">
                             <img src="images/logo_1.jpg" alt="" class="footer_course">
@@ -362,10 +371,6 @@
                             <p class="justify-content-between">Photoshop for Business</p>
                             <p>Jan. 01, 2022</p>
                         </div>
-                    </div>
-                    <div class="input-group mb-3">
-                      <input type="text" class="form-control" placeholder="Enter Email.." aria-label="Recipient's username" aria-describedby="button-addon2">
-                      <button class="btn btn-danger" type="button" id="button-addon2">Subscribe</button>
                     </div>
                 </div>
             </div>
@@ -395,7 +400,7 @@
               slidesToShow: 3,
               slidesToScroll: 1,
               autoplay: true,
-              autoplaySpeed: 1000,
+              autoplaySpeed: 3000,
               arrows: false,
               dots: false,
               pauseOnHover: false,
