--- a/BootStrap/Top_A_One/course.html
+++ b/BootStrap/Top_A_One/course.html
@@ -88,7 +88,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden  mt-3 border-0 shadow">
-                    <img src="images/course_1.jpg" alt="" class="card-img-top course_img_hover mt-3 mt-xl-0">
+                    <img src="images/1.jpg" alt="" class="card-img-top course_img_hover mt-3 mt-xl-0">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Computer Basic</a>
                         </div>
@@ -102,7 +102,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden  mt-3 border-0 shadow">
-                    <img src="images/course_2.jpg" alt="" class="card-img-top course_img_hover">
+                    <img src="images/2.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Excel for Office</a>
                         </div>
@@ -116,7 +116,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden mt-3 border-0 shadow">
-                    <img src="images/course_3.jpg" alt="" class="card-img-top course_img_hover">
+                    <img src="images/3.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Business Pagemaker</a>
                         </div>
@@ -130,7 +130,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden mt-3 border-0 shadow">
-                    <img src="images/course_4.jpg" alt="" class="card-img-top course_img_hover">
+                    <img src="images/5.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Photoshop for Business</a>
                         </div>
@@ -144,7 +144,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden mt-3 border-0 shadow">
-                    <img src="images/course_5.jpg" alt="" class="card-img-top course_img_hover">
+                    <img src="images/6.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Adobe Illustractor</a>
                         </div>
@@ -158,7 +158,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden mt-3 border-0 shadow">
-                    <img src="images/course_6.jpg" alt="" class="card-img-top course_img_hover">
+                    <img src="images/4.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Software Installation</a>
                         </div>
@@ -172,7 +172,7 @@
             </div> 
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden mt-3 border-0 shadow">
-                    <img src="images/course_7.jpg" alt="" class="card-img-top course_img_hover">
+                    <img src="images/7.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
                             <a href="" class="card-title h3 text-decoration-none">Vedio Editing for Busic</a>
                         </div>
