--- a/BootStrap/Top_A_One/index.html
+++ b/BootStrap/Top_A_One/index.html
@@ -28,7 +28,7 @@
                           Category
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <li><a class="dropdown-item" href="#">Computer Basic</a></li>
+                          <li><a class="dropdown-item" href="computer_basic.html">Computer Basic</a></li>
                           <li><a class="dropdown-item" href="#">Excel for Office</a></li>
                           <li><a class="dropdown-item" href="#">Business Pagemaker</a></li>
                           <li><a class="dropdown-item" href="#">Photoshop for Business</a></li>
@@ -169,9 +169,9 @@
         <div class="row">
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
-                    <img src="images/5.jpg" alt="" class="card-img-top course_img_hover mt-3 mt-xl-0">
+                    <img src="images/5.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
-                            <a href="" class="card-title h3 text-decoration-none">Photoshop for Business</a>
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Photoshop for Business</a>
                         </div>
                         <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
                         <hr class="mx-3">
@@ -185,7 +185,7 @@
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/6.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
-                            <a href="" class="card-title h3 text-decoration-none">Adobe Illustractor</a>
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Adobe Illustractor</a>
                         </div>
                         <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
                         <hr class="mx-3">
@@ -199,7 +199,7 @@
                 <div class="card course_img_hidden mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/7.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body">
-                            <a href="" class="card-title h3 text-decoration-none">Vedio Editing for Busic</a>
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Vedio Editing for Busic</a>
                         </div>
                         <p><span class="ms-3">12 Lectures</span><span class="float-end me-3">4 Months</span></p>
                         <hr class="mx-3">
@@ -248,10 +248,10 @@
         <h2 class="text-center fw-bold tm_head mb-5">Up Comming Courses</h2>
         <div class="row">
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
-                <div class="card course_img_hidden mt-3 mt-xl-0 border-0 shadow">
-                    <img src="images/comming_1.1.jpg" alt="" class="card-img-top course_img_hover ">
-                        <div class="card-body">
-                            <a href="" class="card-title h3 text-decoration-none">Photoshop Graphic Design</a>
+                <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
+                    <img src="images/comming_2.1.jpg" alt="" class="card-img-top course_img_hover">
+                        <div class="card-body  comming_card">
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Motion Graphic Design</a>
                         </div>
                         <p class="ms-3 me-3">There will be opportunities to study courses up to the professional level.</p>
                         <hr class="mx-3">
@@ -262,7 +262,7 @@
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/comming_2.1.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body  comming_card">
-                            <a href="" class="card-title h3 text-decoration-none">Motion Graphic Design</a>
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Motion Graphic Design</a>
                         </div>
                         <p class="ms-3 me-3">There will be opportunities to study courses up to the professional level.</p>
                         <hr class="mx-3">
@@ -273,7 +273,7 @@
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/comming_3.1.jpg" alt="" class="card-img-top course_img_hover">
                         <div class="card-body comming_card">
-                            <a href="" class="card-title h3 text-decoration-none">Adobe Premier Pro</a>
+                            <a href="" class="card-title fs-4 fw-bold text-decoration-none">Adobe Premier Pro</a>
                         </div>
                         <p class="ms-3 me-3">There will be opportunities to study courses up to the professional level.</p>
                         <hr class="mx-3">
